package dev.java10x.CadastroDeNinjas.Missoes;

public enum Dificuldade {
    RANK_A,
    RANK_B,
    RANK_C,
    RANK_D,
    RANK_E;
}
