package dev.java10x.CadastroDeNinjas.Ninjas;

public enum Rank {
    INICIANTE,
    INTERMEDIARIO,
    EXPERIENTE,
    VETERANO,
    ELITE,
    LENDA;
}
